<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/welcome_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="@string/welcome_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_title"
        app:layout_constraintStart_toStartOf="@+id/welcome_title"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_continue"
        app:layout_constraintEnd_toEndOf="@+id/welcome_description"
        app:layout_constraintStart_toStartOf="@+id/welcome_description"
        app:layout_constraintTop_toBottomOf="@+id/welcome_description" />

</android.support.constraint.ConstraintLayout>